--- a/Lesson1/styles.css
+++ b/Lesson1/styles.css
@@ -1,16 +1,16 @@
 p
 {
-    font-size: 30pcx;
+    font-size: 30px;
     background: yellowgreen;
     text-align: center;
 }
 h1
 {
     background: green;
-    font-size: 10pcx;
+    font-size: 10px;
 }
 h2
 {
     background: green;
-    font-size: 10pcx;
+    font-size: 10px;
 }
